--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
     --transparent-white-color: rgba(255, 255, 255, 0.6);
     --secondary-bg-color: #F5F4FA;
     --dark-bg-color: #2F303A;
+    --social-icon-color: #afb1b8;
 }
 
 body {
@@ -110,12 +111,12 @@ ul {
 .site-nav {
     display: flex;
     align-items: center;
+    gap: 50px;
 }
-
-.site-nav .item+.item,
-.header-contacts .item+.item {
+/* 
+.site-nav .item+.item {
     margin-left: 50px;
-}
+} */
 
 .site-nav .link {
     padding-top: 32px;
@@ -135,6 +136,12 @@ ul {
 .header-contacts {
     display: flex;
     margin-left: auto;
+    gap: 30px;
+}
+
+.header-contacts .link {
+    display: flex;
+    align-items: center;
 }
 
 .header-contacts .link {
@@ -147,9 +154,17 @@ ul {
     letter-spacing: 0.02em;
 }
 
+.header-contacts .icon {
+    margin-right: 10px;
+    fill: var(--primary-text-color);
+}
+
 .header-contacts .link:hover,
-.header-contacts .link:focus {
+.header-contacts .link:focus,
+.header-contacts .link:hover .icon,
+.header-contacts .link:focus .icon {
     color: var(--accent-color);
+    fill: var(--accent-color);
 }
 
 
@@ -246,7 +261,7 @@ ul {
 
 .feature-list .icon {
     display: block;
-    width: 270px;
+    width: 100%;
     height: 120px;
     padding-top: 25px;
     padding-bottom: 25px;
@@ -335,41 +350,59 @@ ul {
 }
 
 .social-list .social-item {
-    /* width: 44px;
-    height: 44px; */
     border: none;
     border-radius: 50%;
-
-    outline: 1px solid tomato;
 }
 
-
-.social-list .icon {
+.social-item .icon {
     display: block;
-    width: 44px;
-    height: 44px;
+
+    fill: var(--social-icon-color);
 }
+
+
+.social-item:hover .icon,
+.social-item .link:focus .icon {
+    fill: var(--primary-white-color);
+}
+
+.social-item:hover,
+.social-item .link:focus .icon {
+    background-color: var(--accent-color);
+}
+
+
 
 /* Client section */
 
 .client-list {
     display: flex;
     gap: 30px;
-
 }
 
+
+/* 
+.client-list .link{
+    width: 170px;
+    height: 92px;
+    padding: 16px 32px;
+}
+ */
 .client-list .icon {
-    display: block;
     width: 170px;
     height: 92px;
     padding: 16px 32px;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
 
+    fill: var(--social-icon-color);
     background-color: var(--primary-white-color);
 }
 
-
+.client-list .icon:hover {
+    fill: var(--accent-color);
+    border-color: var(--accent-color);
+}
 
 
 /* Footer */
@@ -426,7 +459,15 @@ ul {
     text-transform: uppercase;
 }
 
-/* ========================================== */
+.social-contacts .social-item {
+    background: rgba(255, 255, 255, 0.1);
+}
+
+.social-contacts .social-item:hover {
+    background-color: var(--accent-color);
+}
+
+/* ================================================== */
 
 /*===    Styles for Portfolio   ===*/
 
@@ -477,6 +518,13 @@ ul {
 
 .portfolio-item {
     flex-basis: calc((100% - 60px) / 3);
+}
+
+.portfolio-item:hover {
+    box-shadow:
+        0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio-item .label {
