Колір іконок соцмереж

--- a/css/styles.css
+++ b/css/styles.css
@@ -450,7 +450,7 @@ ul {
     text-transform: uppercase;
 }
 
-.social-item .icon{
+.social-contacts .icon{
     fill: var(--primary-white-color)
 }
 
