--- a/css/styles.css
+++ b/css/styles.css
@@ -259,10 +259,10 @@ ul {
     flex-basis: calc((100% - 90px) / 4);
 }
 
-.feature-list .icon-wrapper{
+.feature-list .icon-wrapper {
     display: flex;
     justify-content: center;
-    align-items: center;   
+    align-items: center;
     width: 270px;
     height: 120px;
     margin-bottom: 30px;
@@ -383,19 +383,26 @@ ul {
     gap: 30px;
 }
 
-.client-list .icon {
-    display: block;
+.client-list .link {
     width: 170px;
     height: 92px;
-    padding: 16px 32px;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.client-list .icon {
+    display: block;
 
     fill: var(--social-icon-color);
     background-color: var(--primary-white-color);
 }
 
-.client-list .icon:hover {
+.client-list .item:hover .icon,
+.client-list .item:hover .link {
     fill: var(--accent-color);
     border-color: var(--accent-color);
 }
@@ -456,7 +463,7 @@ ul {
     text-transform: uppercase;
 }
 
-.social-contacts .icon{
+.social-contacts .icon {
     fill: var(--primary-white-color)
 }
 
